--- a/src/Home/HomePage.css
+++ b/src/Home/HomePage.css
@@ -5,18 +5,7 @@ body {
   margin: 0;
   padding: 0;
 }
-/* #header {
-  height: max-content;
-  font-family: "Montserrat", sans-serif;
-  width: 100%;
-  background-color: #040D12;
-  padding: 1rem 0;
-  position: sticky;
-  z-index: 99;
-  top: 0;
-  left: 0;
-  box-shadow: 0 6px 31px -2px rgba(0, 0, 0, 0.1);
-} */
+
 @media (max-width: 800px) {
   #header {
     text-align: center;
@@ -87,26 +76,21 @@ nav {
   text-align: center;
 }
 .home-sec {
-  /* background:linear-gradient(135deg, rgb(122, 220, 180) 0%, rgb(0, 208, 130) 100%); */
-
+ 
   font-family: "Montserrat", sans-serif;
   background-color:rgba(214,229,227,255);
-  /* background-color: linear-gradient(135deg, rgb(122, 220, 180) 0%, rgb(0, 208, 130) 100%); */
+ 
   text-align: start;
   min-height: 60rem;
   height: auto;
   margin: 0 auto 5rem auto;
-  /* display: flex; */
+  
   justify-content: start;
-  /* align-content: center; */
+ 
   max-width: 95rem;
   color: #333;
 }
-/* #home-sec {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
+
 @media (max-width: 800px) {
   .home-sec {
     flex-flow: column wrap;
@@ -117,10 +101,7 @@ nav {
   flex: 1;
   padding: 0 2rem;
 }
- /* .eye-grabber{
-  display: flex;
 
- } */
 @media (max-width: 800px) {
   .eye-grabber {
     max-width: max-content;
@@ -139,13 +120,12 @@ nav {
 }
 .eye-grabber-img {
   flex:1;
-  /* width: 550px;
-  height: 700px; */
+ 
 }
 @media (max-width: 800px) {
   .eye-grabber-img {
     width: 100%;
-    /* height: 50px; */
+    
   }
 }
 .eye-grabber-img img {
@@ -346,7 +326,7 @@ footer a {
 }
 .quote h2{
   color:#628c91;
-  /* font-weight: 700; */
+ 
   font-size: 19px;
 }
 
@@ -374,7 +354,7 @@ footer a {
   transition: all 0.2s;
 }
 .quote-button:hover {
-  background-color: #ff4500; /* Even brighter on hover */
+  background-color: #ff4500;
   cursor: pointer;
 }
 
@@ -384,9 +364,9 @@ footer a {
   justify-content:space-evenly;
 }
 .box{
-   /* height: 400px;
-    width: 420px; */
+
     height:380px;
     width:350px;
     background-color: white;
 }
+
