--- a/src/Exercises/Exercises.css
+++ b/src/Exercises/Exercises.css
@@ -103,6 +103,7 @@
     font-family: Arial, sans-serif;
     background-color: rgba(224, 239, 237, 1);
     margin: 0;
+    margin-bottom: 30px;
     padding: 20px;
 }
 
