--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   /* color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424; */
-
+  background-color: rgba(224, 239, 237, 1);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
