--- a/src/Home/HomePage.css
+++ b/src/Home/HomePage.css
@@ -520,3 +520,11 @@ footer a {
   color: #555;
   line-height: 1.6;
 }
+
+@media (max-width : 1272px){
+  .front-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+  }
+}
